[gd_scene load_steps=5 format=2]

[ext_resource path="res://Grenade.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.1

[sub_resource type="SphereMesh" id=2]
radius = 0.1
height = 0.2

[sub_resource type="SphereShape" id=3]
radius = 5.0

[node name="Grenade" type="RigidBody"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="BlastRadius" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="BlastRadius"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Grenade_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
